--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "new": "node new.mjs",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.8",
