--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
+    "@fontsource-variable/roboto-slab": "^5.1.0",
+    "@sindresorhus/slugify": "^2.2.1",
     "astro": "^4.16.6",
-    "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
   }
 }
